src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/location_specifiers_for_params.sol
contract Foo {
  function f(uint[] storage constant x, uint[] memory y) { }
}