src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/locationSpecifiersForState.sol
contract Foo {
  uint[] memory x;